ELF executables, fixes, and start of stdlib for userland

--- a/progs/blank/Makefile
+++ b/progs/blank/Makefile
@@ -1,6 +1,7 @@
 all:
-	nasm -f elf ./blank.asm -o ./blank.o
-	i686-elf-gcc -g -T ./linker.ld -o ./blank.bin -ffreestanding -nostdlib -fpic -g ./blank.o
+	$(HOME)/opt/cross/bin/i686-elf-gcc -g -std=gnu99 -c ./blank.c -o ./blank.o
+	$(HOME)/opt/cross/bin/i686-elf-gcc -g -T ./linker.ld -o ./blank.elf -ffreestanding -nostdlib -fpic -g ./blank.o ../stdlib/stdlib.elf
 
 clean:
 	rm -f ./blank.o
+	rm -f ./blank.elf
